objects/EUR_CRM_ID_Card__c.object
<CustomObject>
    <description>Support object of segmentation survey</description>
    <fields>
        <fullName>EUR_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>EUR_CRM_ID_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Annual_Volume__c</fullName>
        <description>Annual Volume of all ID Card Volume</description>
        <label>Total Annual Volume</label>
        <summarizedField>EUR_CRM_ID_Card_Volume__c.EUR_CRM_Annual_Volume__c</summarizedField>
        <summaryForeignKey>EUR_CRM_ID_Card_Volume__c.EUR_CRM_ID_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Super_Ultra_Brands__c</fullName>
        <label>Total Super and Ultra Premium Brands</label>
        <summarizedField>EUR_CRM_ID_Card_Volume__c.EUR_CRM_No_Super_Ultra_Premium_Brands__c</summarizedField>
        <summaryForeignKey>EUR_CRM_ID_Card_Volume__c.EUR_CRM_ID_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ID Card (EU)</label>
    <nameField>
        <displayFormat>IDC-{0000}</displayFormat>
        <label>Nº. ID Card</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRT_IDCard</fullName>
        <active>true</active>
        <label>EUR_PRT_IDCard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>